2009-08-13  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* doc/Doxyfile,
	doc/Doxyfile_full:
	Added 'base' to input paths.

2009-08-13  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* base/certificate.h (certificate_t, certificates_t):
	Converted documentation contained in comments of struct members, to
	be useable by doxygen.

	* ChangeLog:
	Improved wording.

2009-08-13  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* base/nvti.h:
	Converted documentation contained in comments of struct members, to
	be useable by doxygen.

2009-08-12  Laban Mwangi <lmwangi@penguinlabs.co.ke>

	* libopenvas/openvas_logging.c, libopenvas/openvas_logging.h:
	Added support for the default group and tidying of comments.
	Fixed setup_log_handlers to load log domains from the configuration
	file.

2009-08-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/README.txt: Updated.

2009-08-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	According to CR #38 (http://www.openvas.org/openvas-cr-38.html) to
	reorganize openvas-libraries, this step prepares the "base" lib.

	* libopenvascommon: rename to "base".

	* base: The former directory "libopenvascommon".

	* Makefile, libopenvas/Makefile: replace all occurances of
	path "libopenvascommon" by "base".

	* MANIFEST: Updated.

2009-08-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* libopenvas/resolve.c: Removed definition of __u32 because
	it is not used anyway.
	Removed code that is deactivated since ever anyway.

2009-07-27  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* packaging/debian/control,
	packaging/debian/libopenvas2-dev.dirs,
	packaging/debian/compat,
	packaging/debian/libopenvas2.dirs,
	packaging/debian/libopenvas2-dev.install,
	packaging/debian/watch,
	packaging/debian/changelog,
	packaging/debian/patches/configure-grypt.dpatch,
	packaging/debian/patches/00list,
	packaging/debian/copyright,
	packaging/debian/libopenvas2.install,
	packaging/debian/rules: