@@ -1,3 +1,8 @@
+2009-08-13  Matthew Mundell <mmundell@intevation.de>
+
+	* libopenvas/openvas_logging.c (setup_log_handlers): Adjust the * check
+	so that the * case also goes on to the next item.
+
 2009-08-13  Felix Wolfsteller <felix.wolfsteller@intevation.de>
 
 	* doc/Doxyfile,
